--- a/Documentation/documentation.html
+++ b/Documentation/documentation.html
@@ -35,80 +35,80 @@
 
   <body>
     <!-- Main content -->
-    <div class="main-content">
+    <div className="main-content">
       <!-- Top navbar -->
       <nav
-        class="navbar navbar-top navbar-expand-md navbar-dark"
+        className="navbar navbar-top navbar-expand-md navbar-dark"
         id="navbar-main"
       >
-        <div class="container-fluid">
+        <div className="container-fluid">
           <!-- Brand -->
           <a
-            class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block"
+            className="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block"
             href="https://demos.creative-tim.com/argon-dashboard-react/#/documentation/overview"
             >Documentation</a
           >
           <!-- Form -->
           <form
-            class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto"
+            className="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto"
           >
-            <div class="form-group mb-0">
-              <div class="input-group input-group-alternative">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"
-                    ><i class="fas fa-search"></i
+            <div className="form-group mb-0">
+              <div className="input-group input-group-alternative">
+                <div className="input-group-prepend">
+                  <span className="input-group-text"
+                    ><i className="fas fa-search"></i
                   ></span>
                 </div>
-                <input class="form-control" placeholder="Search" type="text" />
+                <input className="form-control" placeholder="Search" type="text" />
               </div>
             </div>
           </form>
           <!-- User -->
-          <ul class="navbar-nav align-items-center d-none d-md-flex">
-            <li class="nav-item dropdown">
+          <ul className="navbar-nav align-items-center d-none d-md-flex">
+            <li className="nav-item dropdown">
               <a
-                class="nav-link pr-0"
+                className="nav-link pr-0"
                 href="#"
                 role="button"
                 data-toggle="dropdown"
                 aria-haspopup="true"
                 aria-expanded="false"
               >
-                <div class="media align-items-center">
-                  <span class="avatar avatar-sm rounded-circle">
+                <div className="media align-items-center">
+                  <span className="avatar avatar-sm rounded-circle">
                     <img
                       alt="Image placeholder"
                       src="../src/assets/img/theme/team-4-800x800.jpg"
                     />
                   </span>
-                  <div class="media-body ml-2 d-none d-lg-block">
-                    <span class="mb-0 text-sm  font-weight-bold"
+                  <div className="media-body ml-2 d-none d-lg-block">
+                    <span className="mb-0 text-sm  font-weight-bold"
                       >Jessica Jones</span
                     >
                   </div>
                 </div>
               </a>
               <div
-                class="dropdown-menu dropdown-menu-arrow dropdown-menu-right"
+                className="dropdown-menu dropdown-menu-arrow dropdown-menu-right"
               >
-                <div class=" dropdown-header noti-title">
-                  <h6 class="text-overflow m-0">Welcome!</h6>
+                <div className=" dropdown-header noti-title">
+                  <h6 className="text-overflow m-0">Welcome!</h6>
                 </div>
-                <a href="#pablo" class="dropdown-item">
-                  <i class="ni ni-single-02"></i> <span>My profile</span>
+                <a href="#pablo" className="dropdown-item">
+                  <i className="ni ni-single-02"></i> <span>My profile</span>
                 </a>
-                <a href="#pablo" class="dropdown-item">
-                  <i class="ni ni-settings-gear-65"></i> <span>Settings</span>
+                <a href="#pablo" className="dropdown-item">
+                  <i className="ni ni-settings-gear-65"></i> <span>Settings</span>
                 </a>
-                <a href="#pablo" class="dropdown-item">
-                  <i class="ni ni-calendar-grid-58"></i> <span>Activity</span>
+                <a href="#pablo" className="dropdown-item">
+                  <i className="ni ni-calendar-grid-58"></i> <span>Activity</span>
                 </a>
-                <a href="#pablo" class="dropdown-item">
-                  <i class="ni ni-support-16"></i> <span>Support</span>
+                <a href="#pablo" className="dropdown-item">
+                  <i className="ni ni-support-16"></i> <span>Support</span>
                 </a>
-                <div class="dropdown-divider"></div>
-                <a href="#pablo" class="dropdown-item">
-                  <i class="ni ni-user-run"></i> <span>Logout</span>
+                <div className="dropdown-divider"></div>
+                <a href="#pablo" className="dropdown-item">
+                  <i className="ni ni-user-run"></i> <span>Logout</span>
                 </a>
               </div>
             </li>
@@ -117,16 +117,16 @@
       </nav>
       <!-- Header -->
       <div
-        class="header bg-gradient-primary pb-8 pt-5 pt-lg-8 d-flex align-items-center"
+        className="header bg-gradient-primary pb-8 pt-5 pt-lg-8 d-flex align-items-center"
       >
         <!-- Header container -->
-        <div class="container-fluid">
-          <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-10 text-center">
-              <h1 class="display-2 text-white">
+        <div className="container-fluid">
+          <div className="row justify-content-center">
+            <div className="col-lg-6 col-md-10 text-center">
+              <h1 className="display-2 text-white">
                 Documentation <small>v1.0.0</small>
               </h1>
-              <p class="text-white mt-0 mb-5">
+              <p className="text-white mt-0 mb-5">
                 We are constatly doing updates on the product and documentation,
                 so please check the online version.
               </p>
@@ -135,18 +135,18 @@
         </div>
       </div>
       <!-- Page content -->
-      <div class="container-fluid mt--7">
-        <div class="row justify-content-center">
-          <div class="col-lg-4">
-            <div class="card bg-gradient-default text-center p-5">
+      <div className="container-fluid mt--7">
+        <div className="row justify-content-center">
+          <div className="col-lg-4">
+            <div className="card bg-gradient-default text-center p-5">
               <a
                 href="https://demos.creative-tim.com/argon-dashboard-react/#/documentation/overview"
-                class="btn btn-white btn-icon mb-3 mb-sm-0"
+                className="btn btn-white btn-icon mb-3 mb-sm-0"
               >
-                <span class="btn-inner--icon"
-                  ><i class="ni ni-collection"></i
+                <span className="btn-inner--icon"
+                  ><i className="ni ni-collection"></i
                 ></span>
-                <span class="btn-inner--text">View Docs Online</span>
+                <span className="btn-inner--text">View Docs Online</span>
               </a>
             </div>
           </div>
